{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 5,
  "lineage": "6c3251c4-e05b-62a9-564f-b8d192a050ed",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:network-acl/acl-0783d1ffb369d656c",
            "default_network_acl_id": "acl-0783d1ffb369d656c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0783d1ffb369d656c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "578272615191",
            "region": "us-east-1",
            "subnet_ids": null,
            "tags": {
              "BU": "apps",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:route-table/rtb-08e1ffe9c1968d2fc",
            "default_route_table_id": "rtb-08e1ffe9c1968d2fc",
            "id": "rtb-08e1ffe9c1968d2fc",
            "owner_id": "578272615191",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "BU": "apps",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:security-group/sg-0b9067079a538586a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b9067079a538586a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "578272615191",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "BU": "apps",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:vpc/vpc-0b471fd504ce56640",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0783d1ffb369d656c",
            "default_route_table_id": "rtb-08e1ffe9c1968d2fc",
            "default_security_group_id": "sg-0b9067079a538586a",
            "dhcp_options_id": "dopt-0c3389c5d4a7b5991",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b471fd504ce56640",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-02581eeaf4681b27d",
            "ipv6_cidr_block": "2600:1f18:4b35:7f00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e1ffe9c1968d2fc",
            "owner_id": "578272615191",
            "region": "us-east-1",
            "tags": {
              "BU": "apps",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}